tests/ui/expr/if/if-typeck.stderr
error[E0308]: mismatched types
  --> $DIR/if-typeck.rs:8:8
   |
LL |     if f { }
   |        ^ expected `bool`, found fn item
   |
   = note: expected type `bool`
           found fn item `fn() {f}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
